# graphics-course

./: README.md  TODO  run.sh
cmake/: common.cmake  thirdparty.cmake
tasks/: CMakeLists.txt
tasks/a_a/: App.cpp  App.hpp  CMakeLists.txt
tasks/a_a/shaders/: copy.frag  fxaa.frag  texture.frag  toy.frag  toy.vert
tasks/aa/: CMakeLists.txt  WorldRenderer.cpp
tasks/fog/: App.cpp  App.hpp  CMakeLists.txt  Particle.hpp  ParticleEmitter.hpp  ParticleSystem.hpp
tasks/fog/shaders/: fog_texture.frag  fog_texture.vert  particle.frag  texture.frag  toy.frag
tasks/imgui/: App.cpp  App.hpp  CMakeLists.txt  WorldRenderer.cpp
tasks/imgui/imgui_terrain_renderer/: App.cpp  Renderer.cpp  WorldRenderer.cpp
tasks/imgui/shaders/: texture.frag  toy.frag
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt  results.txt
tasks/inflight_frames/shaders/: UniformParams.h  texture.comp  toy.frag
tasks/local_shadertoy1/: App.cpp  App.hpp  README.md
tasks/local_shadertoy1/shaders/: toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: procedural_texture.comp  texture.comp  toy.comp  toy.frag  toy.vert
tasks/model_bakery/: README.md
tasks/particles/: App.cpp  CMakeLists.txt  WorldRenderer.cpp
tasks/particles1/: App.cpp  App.hpp  CMakeLists.txt  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp
tasks/particles1/shaders/: particle.frag  particle.vert  toy.frag
tasks/shadertoy1/: shader  shadertoy.url
tasks/shadertoy2/: buffer_a  cube_a  shader  url
tasks/ssao/: CMakeLists.txt  WorldRenderer.cpp
(+5 files in other folders)
